# Rag-System

./: .dockerignore  .env.example  .gitignore  AI_USAGE.md  ARCHITECTURE.md  OPERATIONS.md  README.md  docker-compose.dev.yml  docker-compose.live.yml  docker-compose.mock.yml  docker-compose.yml  package.json
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: dependencies.py  errors.py
backend/app/core/: config.py  constants.py  logging.py  security.py
backend/app/domain/: __init__.py  errors.py  uploads.py
backend/app/rag/: chains.py  chunking.py  citation_labels.py  embeddings.py  llm_providers.py  loaders.py  preprocessing.py  prompts.py  query_decomposition.py  retrieval_cache.py  retrieval_support.py  retriever.py  tables.py
backend/app/repositories/: answers.py  chunks.py  database.py  documents.py  ingestion_jobs.py  models.py  users.py
backend/app/schemas/: answers.py  auth.py  common.py  documents.py
backend/app/services/: auth_service.py  citation_service.py  confidence_service.py  document_deletion_service.py  document_service.py  evidence_assistant_service.py  ingestion_service.py  ingestion_worker.py
backend/app/storage/: base.py  local.py
backend/app/utils/: files.py  hashing.py  language.py
backend/app/vectorstores/: base.py  chroma_store.py
backend/prompts/: citation_repair_v1.md  market_access_answer_v1.md
backend/tests/: conftest.py
backend/tests/integration/: test_ask_api.py  test_auth_api.py  test_documents_api.py
backend/tests/unit/: test_chunking.py  (+19 more)
(+51 files in other folders)
