[project]
name = "market-access-evidence-assistant-backend"
version = "0.1.0"
description = "Ingestion backend for the Market Access Evidence Assistant (Part 1)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "python-multipart>=0.0.9",
    "python-docx>=1.1",
    "pymupdf>=1.24",
    "chromadb>=0.5",
    "google-genai>=1.0",
    "langchain-core>=0.2",
    "langchain-google-genai>=2.0",
    "langchain-openai>=0.1",
    "langchain-text-splitters>=0.2",
    "openai>=1.30",
    "tenacity>=8.3",
    "pyjwt>=2.8",
    "bcrypt>=4.1",
    "email-validator>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.5",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# Depends()/File()/Form() in a default position is the required FastAPI
# dependency-injection pattern, not the mutable-default-argument anti-pattern
# B008 exists to catch.
extend-immutable-calls = ["fastapi.Depends", "fastapi.File", "fastapi.Form"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
